oauth2-proxy/oauth_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: auth.ratanboddu.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx
              servicePort: 80
